fixes tiny spacing issue

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -115,7 +115,7 @@ a[href^="https://maps.google.com/maps"]{display:none !important}
    margin-top: .8em;
    margin-right: 1.3em;
    top: 2em;
-   right: 1.6em;
+   right: 1.7em;
 }
 
 .welcome{
